filter low qualty cells

--- a/analysis/QC_single_cell_library.Rmd
+++ b/analysis/QC_single_cell_library.Rmd
@@ -690,6 +690,8 @@ In this analysis we performed QC by checking the following criteria:
 
 * LDA analysis for multiple cells in one well  
 
+* Conversion ratios for genes and ERCCs 
+
 * Mitochondrial read ratios  
 
 
