--- a/analysis/index.Rmd
+++ b/analysis/index.Rmd
@@ -24,6 +24,8 @@ These are the projects I am working on during the my rotation in the Stephens la
 
 * [Compare Gilad single cell counts to my analysis](compare_count_data.html)
 
+* [Genome wide read count comparison between analysis](genome_wide_data_comparison.html)
+
 Continue the Gilad single cell anaylsis:
 
 * [Create gene-x-sample count matrices and annotation file](gene_x_sample_count_matrix.html)
