--- a/analysis/cell_to_cell_variation.Rmd
+++ b/analysis/cell_to_cell_variation.Rmd
@@ -123,5 +123,17 @@ all.equal(names(permuted_pval_subset),
 
 Compute drop-out rates  
 
+```{r}
+drop_out <- lapply(unique(anno_filter$individual), function(ind) {
+  temp_df <- molecules_filter_subset[,anno_filter$individual == ind]
+  zero_count <- rowMeans(temp_df == 0)
+  return(zero_count)
+})  
+names(drop_out) <- unique(anno_filter$individual)
+drop_out$all <- rowMeans(as.matrix(molecules_filter_subset) == 0)
+
+
+summary(drop_out$NA19098)
+```
 
 
